force-app/main/default/objects/Pet__c/fields/DataUltimaVacinacao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaVacinacao__c</fullName>
    <label>Data da Ultima Vacinação</label>
    <type>Date</type>
</CustomField>