force-app/main/default/objects/Pet__c/fields/Raca__c.field-meta.xml
<CustomField>
    <fullName>Raca__c</fullName>
    <label>Raça</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Especie__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIAMÊS</fullName>
            </value>
            <value>
                <fullName>PERSA</fullName>
            </value>
            <value>
                <fullName>SNOWSHOE</fullName>
            </value>
            <value>
                <fullName>MAINE COON</fullName>
            </value>
            <value>
                <fullName>ANGORÁ</fullName>
            </value>
            <value>
                <fullName>SPHYNX</fullName>
            </value>
            <value>
                <fullName>RAGDOLL</fullName>
            </value>
            <value>
                <fullName>SHORTHAIR</fullName>
            </value>
            <value>
                <fullName>VIRA-LATA</fullName>
            </value>
            <value>
                <fullName>PUG</fullName>
            </value>
            <value>
                <fullName>MALTÊS</fullName>
            </value>
            <value>
                <fullName>SHIH TZU</fullName>
            </value>
            <value>
                <fullName>BULDOGUE</fullName>
            </value>
            <value>
                <fullName>PIT BULL</fullName>
            </value>
            <value>
                <fullName>SPITZ ALEMÃO</fullName>
            </value>
            <value>
                <fullName>DACHSHUND</fullName>
            </value>
            <value>
                <fullName>PASTOR-ALEMÃO</fullName>
            </value>
            <value>
                <fullName>POODLE</fullName>
            </value>
            <value>
                <fullName>ROTTWEILER</fullName>
            </value>
            <value>
                <fullName>LABRADOR</fullName>
            </value>
            <value>
                <fullName>GOLDEN RETRIEVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>